[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Asylum/LUL/MegaLUL.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/BoshyCharacters/Bosses/MegaLULBoss.gd" type="Script" id=2]
[ext_resource path="res://Resources/Graphics/Other/UI/Healthbar/meter_bar_center-repeating_red.png" type="Texture" id=3]
[ext_resource path="res://Resources/Graphics/Other/UI/Healthbar/meter_bar_holder_center-repeating_red.png" type="Texture" id=4]
[ext_resource path="res://Resources/Graphics/Other/UI/Healthbar/mid_way.jpg" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 74.6685
height = 95.7779

[node name="MegaLULBoss" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Health" type="TextureProgress" parent="."]
visible = false
margin_left = -232.0
margin_top = -193.0
margin_right = 232.0
margin_bottom = -153.0
max_value = 20.0
value = 20.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MidPoint" type="Sprite" parent="Health"]
position = Vector2( 232, 20 )
scale = Vector2( 0.2, 0.6 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
rotation = 0.749896
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PoolVector2Array( 40, -110, 61, -104, 94, -77, 107, -5, 93, 26, 55, 88, 11, 112, -82, 112, -113, 79, -105, 58, -108, 16, -87, -31, -54, -58, 11, -95, 27, -95 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
